--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
+
+<mat-sidenav-container>
+    <mat-sidenav opened mode="side">
+       <app-page-side-nav></app-page-side-nav>
+    </mat-sidenav>
+    <mat-sidenav-content>
 <app-page-header></app-page-header>
 <main>
-    <h1>Content</h1>
+    <router-outlet></router-outlet>
 </main>
 <app-page-footer></app-page-footer>
+    </mat-sidenav-content>
+</mat-sidenav-container>
