--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,17 @@
-:host{
+mat-sidenav-container {
+  height: 100vh;
+
+  mat-sidenav {
+    width: 250px;
+  }
+
+  mat-sidenav-content {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-}
-main{
-    flex: 1 1 auto;
+
+    main {
+        padding: 1rem;
+      flex: 1 1 auto;
+    }
+  }
 }
