--- a/src/app/shared/components/page-side-nav/page-side-nav.component.html
+++ b/src/app/shared/components/page-side-nav/page-side-nav.component.html
@@ -4,7 +4,9 @@
     </mat-card-content>
 </mat-card>
 <mat-nav-list>
-    <a mat-list-item routerLink="/temp" routerLinkActive="active-link">Item1</a>
-     <a mat-list-item routerLink="/temp2" routerLinkActive="active-link">Item2</a>
-      <a mat-list-item routerLink="/temp3" routerLinkActive="active-link">Item3</a>
+    @for (item of navItems; track navItems) {
+          <a mat-list-item routerLink="/{{item.link}}" routerLinkActive="active-link">{{item.value}}</a>
+    }
+   
+    
 </mat-nav-list>
