--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -31,48 +31,63 @@
         <mat-card-title>Create Account</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <mat-grid-list cols="2" rowHeight="65px" gutterSize="10px">
+        <mat-grid-list cols="2" rowHeight="65px" gutterSize="10px" [formGroup]="registerForm">
             <mat-grid-tile>
                   <mat-form-field color="accent">
                     <mat-label>First Name</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="firstName">
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile>
                <mat-form-field color="accent">
                     <mat-label>Last Name</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="lastName">
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile colspan="2">
                 <mat-form-field color="accent">
                     <mat-label>Email</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="email">
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile colspan="2">
                 <mat-form-field color="accent">
                     <mat-label>Mobile Number</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="mobileNumber">
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile>
                 <mat-form-field color="accent">
                     <mat-label>Password</mat-label>
-                    <input matInput>
+                    <input [type]="hidePwdContent ? 'password' : 'text'"
+                    matInput formControlName="password">
+                    <button mat-icon-button matSuffix (click)="hidePwdContent = !hidePwdContent">
+                        <mat-icon>
+                           {{hidePwdContent ? "visibility_off" :
+                                "visibility_on"}}
+                        </mat-icon>
+                    </button>
                 </mat-form-field>
             </mat-grid-tile>
             <mat-grid-tile>
                 <mat-form-field color="accent">
                     <mat-label>Repeat Password</mat-label>
-                    <input matInput>
+                    <input [type]="hidePwdContent ? 'password' : 'text'"
+                    matInput formControlName="repeatPassword">
+                     <button mat-icon-button matSuffix (click)="hidePwdContent = !hidePwdContent">
+                         <mat-icon>
+                           {{hidePwdContent ? "visibility_off" :
+                                "visibility_on"}}
+                        </mat-icon>
+                    </button>
                 </mat-form-field>
             </mat-grid-tile>
 
         </mat-grid-list>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="accent">Register</button>
+        <button mat-raised-button color="accent"
+        [disabled]="registerForm.invalid" (click)="register()">Register</button>
     </mat-card-actions>
     <mat-card-actions>
         <h4>Already Have an Account</h4>
